--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Protfolio</title>
+    <title>Zulfi Achsan Sani</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -74,56 +74,47 @@
     </section>
     <!-- About Section end -->
 
-    <!-- Menu Section start -->
-    <section id="education" class="menu">
-        <h2><span>Menu</span> Kami</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, repellendus numquam quam tempora voluptatum.
+    <!-- Education Section start -->
+    <!-- PR ngubah nama class menu di css dan javascript -->
+    <section id="education" class="education">
+        <h2><span>My</span>Education</h2>
+        <p>Berikut ini adalah daftar sekolah yang sudah saya tempuh dari sd hingga menjadi seorang sarjana
         </p>
 
         <div class="row">
-            <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
+            <div class="education-card">
+                <img src="img/education/sd.png" alt="education" class="menu-card-img">
+                <h3 class="menu-card-title">- SDN KDW 02 Pagi -</h3>
+                <p class="menu-card-price">2006-2012</p>
             </div>
-            <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
+            <div class="education-card">
+                <img src="img/education/mts.png" alt="education" class="menu-card-img">
+                <h3 class="menu-card-title">- MTsN 22 Jakarta -</h3>
+                <p class="menu-card-price">2012-2015</p>
             </div>
-            <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
+            <div class="education-card">
+                <img src="img/education/sma.png" alt="education" class="menu-card-img">
+                <h3 class="menu-card-title">- SMA Bina Dharma Jakarta -</h3>
+                <p class="menu-card-price">2015-2018</p>
             </div>
-            <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
-            </div>
-            <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
-            </div>
-            <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
+            <div class="education-card">
+                <img src="img/education/lambang-unimma.png" alt="Espresso" class="menu-card-img">
+                <h3 class="menu-card-title">- Universitas Muhammadiyah Magelang -</h3>
+                <p class="menu-card-price">2018-2022</p>
             </div>
         </div>
     </section>
-    <!-- Menu Section end -->
+    <!-- Education Section end -->
 
     <!-- Products Section start -->
-    <section class="products" id="products">
-        <h2><span>Produk Unggulan</span> Kami</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo unde eum, ab fuga possimus iste.</p>
+    <section class="products" id="myproject">
+        <h2><span>Project</span> Saya</h2>
+        <p>Dibawah ini beberapa projek yang sudah saya kerjakan baik desain maupun coding</p>
 
         <div class="row">
             <div class="product-card">
                 <div class="product-icons">
-                    <a href="#"><i data-feather="shopping-cart"></i></a>
+                    <a href="#"><i data-feather="phone"></i></a>
                     <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
                 </div>
                 <div class="product-image">
@@ -143,7 +134,7 @@
             </div>
             <div class="product-card">
                 <div class="product-icons">
-                    <a href="#"><i data-feather="shopping-cart"></i></a>
+                    <a href="#"><i data-feather="phone"></i></a>
                     <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
                 </div>
                 <div class="product-image">
@@ -163,7 +154,7 @@
             </div>
             <div class="product-card">
                 <div class="product-icons">
-                    <a href="#"><i data-feather="shopping-cart"></i></a>
+                    <a href="#"><i data-feather="phone"></i></a>
                     <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
                 </div>
                 <div class="product-image">
