--- a/index.html
+++ b/index.html
@@ -208,20 +208,21 @@
     <!-- Footer start -->
     <footer>
         <div class="socials">
-            <a href="#"><i data-feather="instagram"></i></a>
-            <a href="#"><i data-feather="twitter"></i></a>
-            <a href="#"><i data-feather="facebook"></i></a>
+            <a target="_blank" href="https://www.instagram.com/zulfiachsans/"><i data-feather="instagram"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/zulfi-achsan-s-493a99138/"><i data-feather="linkedin"></i></a>
+            <a target="_blank" href="https://github.com/zulfiachsans/"><i data-feather="github"></i></a>
         </div>
 
         <div class="links">
             <a href="#home">Home</a>
-            <a href="#about">Tentang Kami</a>
-            <a href="#menu">Menu</a>
-            <a href="#contact">Kontak</a>
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#myproject">MyProject</a>
+            <a href="#contact">Contacts</a>
         </div>
 
         <div class="credit">
-            <p>Created by <a href="">sandhikagalih</a>. | &copy; 2023.</p>
+            <p>Created by <a href="">zulfiachsans</a>. | &copy; 2023.</p>
         </div>
     </footer>
     <!-- Footer end -->
