--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                     <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
                 </div>
                 <div class="product-image">
-                    <img src="img/products/1.jpg" alt="Product 1">
+                    <img src="img/products/saget.png" alt="Product 1">
                 </div>
                 <div class="product-content">
-                    <h3>Coffee Beans 1</h3>
+                    <h3>Saget Bisnis</h3>
                     <div class="product-stars">
                         <i data-feather="star" class="star-full"></i>
                         <i data-feather="star" class="star-full"></i>
@@ -138,10 +138,10 @@
                     <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
                 </div>
                 <div class="product-image">
-                    <img src="img/products/1.jpg" alt="Product 1">
+                    <img src="img/products/unimma.png" alt="Product 1">
                 </div>
                 <div class="product-content">
-                    <h3>Coffee Beans 1</h3>
+                    <h3>Unimma Apps</h3>
                     <div class="product-stars">
                         <i data-feather="star"></i>
                         <i data-feather="star"></i>
@@ -179,22 +179,22 @@
     <!-- Contact Section start -->
     <section id="contact" class="contact">
         <h2><span>Kontak</span> Kami</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, provident.
+        <p>Silahkan masukkan nama anda beserta email yang tertera di bawah ini
         </p>
 
         <div class="row">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15824.360240789283!2d110.22838328015094!3d-7.455288604436365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a860a4553d7b1%3A0x5027a76e3558420!2sGirirejo%2C%20Kec.%20Tegalrejo%2C%20Kabupaten%20Magelang%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1683189710266!5m2!1sid!2sid"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
             <form action="">
-                <div class="input-group">
+                <div class="input-group" id="name">
                     <i data-feather="user"></i>
                     <input type="text" placeholder="nama">
                 </div>
-                <div class="input-group">
+                <div class="input-group" id="email">
                     <i data-feather="mail"></i>
                     <input type="text" placeholder="email">
                 </div>
-                <div class="input-group">
+                <div class="input-group" id="phone">
                     <i data-feather="phone"></i>
                     <input type="text" placeholder="no hp">
                 </div>
@@ -232,7 +232,7 @@
         <div class="modal-container">
             <a href="#" class="close-icon"><i data-feather="x"></i></a>
             <div class="modal-content">
-                <img src="img/products/1.jpg" alt="Product 1">
+                <img src="img/products/saget.png" alt="Product">
                 <div class="product-content">
                     <h3>Product 1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, tenetur cupiditate facilis obcaecati ullam maiores minima quos perspiciatis similique itaque, esse rerum eius repellendus voluptatibus!</p>
@@ -244,7 +244,7 @@
                         <i data-feather="star"></i>
                     </div>
                     <div class="product-price">IDR 30K <span>IDR 55K</span></div>
-                    <a href="#"><i data-feather="shopping-cart"></i> <span>add to cart</span></a>
+                    <a href="#"><i data-feather="phone"></i> <span>Hubungi saya</span></a>
                 </div>
             </div>
         </div>
