--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#education">Education</a>
+            <a href="#experience">Experience</a>
+            <a href="#skills">Skills</a>
             <a href="#myproject">MyProject</a>
             <a href="#contact">Contacts</a>
         </div>
@@ -75,7 +77,6 @@
     <!-- About Section end -->
 
     <!-- Education Section start -->
-    <!-- PR ngubah nama class menu di css dan javascript -->
     <section id="education" class="education">
         <h2><span>My</span>Education</h2>
         <p>Berikut ini adalah daftar sekolah yang sudah saya tempuh dari sd hingga menjadi seorang sarjana
@@ -106,75 +107,96 @@
     </section>
     <!-- Education Section end -->
 
-    <!-- Products Section start -->
-    <section class="products" id="myproject">
-        <h2><span>Project</span> Saya</h2>
-        <p>Dibawah ini beberapa projek yang sudah saya kerjakan baik desain maupun coding</p>
+    <!-- Experience Start-->
+    <section class="experience" id="experience">
+        <h2><span>Experience</span> Saya</h2>
+        <p>Dibawah ini beberapa experience yang sudah saya lakukan</p>
 
         <div class="row">
             <div class="product-card">
-                <div class="product-icons">
-                    <a href="#"><i data-feather="phone"></i></a>
-                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
-                </div>
                 <div class="product-image">
-                    <img src="img/products/saget.png" alt="Product 1">
+                    <img src="img/experience/lambang-unimma.png" alt="Product 1">
                 </div>
                 <div class="product-content">
-                    <h3>Saget Bisnis</h3>
+                    <h3>Universitas Muhammadiyah Magelang</h3>
                     <div class="product-stars">
                         <i data-feather="star" class="star-full"></i>
                         <i data-feather="star" class="star-full"></i>
                         <i data-feather="star" class="star-full"></i>
                         <i data-feather="star" class="star-full"></i>
-                        <i data-feather="star"></i>
+                        <i data-feather="star" class="star-full"></i>
                     </div>
-                    <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                    <div class="product-price">
+                        UI/UX Designer, Flutter Developer
+                        <p>(contract oct 2022-Now)</p> Internship Biro Sistem Informasi
+                        <p>(Sep 2021 - Oct 2022)</p> Volunteer Merapi evacuation
+                        <p>(Nov 2020 - Feb 2021)</p>
+                    </div>
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-icons">
-                    <a href="#"><i data-feather="phone"></i></a>
-                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
-                </div>
                 <div class="product-image">
-                    <img src="img/products/unimma.png" alt="Product 1">
+                    <img src="img/experience/bangkit.jpeg" alt="Product 1">
                 </div>
                 <div class="product-content">
-                    <h3>Unimma Apps</h3>
+                    <h3>Bangkit Academy</h3>
                     <div class="product-stars">
-                        <i data-feather="star"></i>
-                        <i data-feather="star"></i>
-                        <i data-feather="star"></i>
-                        <i data-feather="star"></i>
-                        <i data-feather="star"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
                     </div>
-                    <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                    <div class="product-price">
+                        Mobile Development Learning Path Graduate
+                        <p>Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka (Feb 2021 - Jun 2021)
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-icons">
-                    <a href="#"><i data-feather="phone"></i></a>
-                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
-                </div>
                 <div class="product-image">
-                    <img src="img/products/1.jpg" alt="Product 1">
+                    <img src="img/experience/gdsc.jpeg" alt="Product 1">
                 </div>
                 <div class="product-content">
-                    <h3>Coffee Beans 1</h3>
+                    <h3>Google Developer Student Clubs</h3>
                     <div class="product-stars">
-                        <i data-feather="star"></i>
-                        <i data-feather="star"></i>
-                        <i data-feather="star"></i>
-                        <i data-feather="star"></i>
-                        <i data-feather="star"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
                     </div>
-                    <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                    <div class="product-price">
+                        Core Team Developers UI/UX Designer | Flutter Developer
+                        <p>Oct 2022 - Present</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Products Section end -->
+    <!-- Experience End-->
+
+    <!-- Skills dan Social Media Start -->
+    <section id="skills" class="skills">
+        <h2><span>Skills</span> Saya</h2>
+        <p>Skills yang saya miliki
+        </p>
+        <div class="row">
+            <div class="column">
+                <h2>Skills</h2>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/javascript-colored.svg" width="36" height="36" alt="Javascript" /></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Glossary/HTML5" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/html5-colored.svg" width="36" height="36" alt="HTML5" /></a>
+                <a href="https://reactjs.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/react-colored.svg" width="36" height="36" alt="React" /></a>
+                <a href="https://getbootstrap.com/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/bootstrap-colored.svg" width="36" height="36" alt="Bootstrap" /></a>
+                <a href="https://tailwindcss.com/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/tailwindcss-colored.svg" width="36" height="36" alt="TailwindCSS" /></a>
+                <a href="https://www.w3.org/TR/CSS/#css" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/css3-colored.svg" width="36" height="36" alt="CSS3" /></a>
+                <a href="https://www.figma.com/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/figma-colored.svg" width="36" height="36" alt="Figma" /></a>
+            </div>
+        </div>
+        </div>
+    </section>
+    <!-- Skills dan Social Media End -->
 
     <!-- Contact Section start -->
     <section id="contact" class="contact">
