--- a/index.html
+++ b/index.html
@@ -198,6 +198,76 @@
     </section>
     <!-- Skills dan Social Media End -->
 
+    <!-- Products Section start -->
+    <section class="products" id="myproject">
+        <h2><span>Project</span> Saya</h2>
+        <p>Dibawah ini beberapa projek yang sudah saya kerjakan baik desain maupun coding</p>
+
+        <div class="row">
+            <div class="product-card">
+                <div class="product-icons">
+                    <a href="#"><i data-feather="phone"></i></a>
+                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+                </div>
+                <div class="product-image">
+                    <img src="img/product/saget.png" alt="Product 1">
+                </div>
+                <div class="product-content">
+                    <h3>Saget Bisnis</h3>
+                    <div class="product-stars">
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star"></i>
+                    </div>
+                    <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-icons">
+                    <a href="#"><i data-feather="phone"></i></a>
+                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+                </div>
+                <div class="product-image">
+                    <img src="img/product/unimma.png" alt="Product 1">
+                </div>
+                <div class="product-content">
+                    <h3>Unimma Apps</h3>
+                    <div class="product-stars">
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                    </div>
+                    <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-icons">
+                    <a href="#"><i data-feather="phone"></i></a>
+                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+                </div>
+                <div class="product-image">
+                    <img src="img/product/1.jpg" alt="Product 1">
+                </div>
+                <div class="product-content">
+                    <h3>Coffee Beans 1</h3>
+                    <div class="product-stars">
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>
+                    </div>
+                    <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Products Section end -->
+
     <!-- Contact Section start -->
     <section id="contact" class="contact">
         <h2><span>Kontak</span> Kami</h2>
